fix(api): applications of a student : array of applications instead of object + user_id ==> student_id
